--- a/src/gui/Menu_Admin.fxml
+++ b/src/gui/Menu_Admin.fxml
@@ -127,11 +127,11 @@
             </AnchorPane>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="anchorBusquedaLibros" prefHeight="700.0" prefWidth="850.0" style="-fx-background-color: #D8754E;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane fx:id="anchorBusquedaLibros" layoutY="99.0" prefHeight="750.0" prefWidth="850.0" style="-fx-background-color: #D8754E;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <AnchorPane layoutX="13.0" layoutY="13.0" prefHeight="638.0" prefWidth="837.0" style="-fx-background-color: #ffffff;" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
                <children>
-                  <AnchorPane layoutY="-97.0" prefHeight="660.0" prefWidth="830.0" style="-fx-background-color: #F2F2F2;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <AnchorPane prefHeight="631.0" prefWidth="830.0" style="-fx-background-color: #F2F2F2;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
                         <AnchorPane layoutX="34.0" layoutY="26.0" prefHeight="106.0" prefWidth="790.0" AnchorPane.bottomAnchor="604.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
                            <children>
@@ -143,16 +143,13 @@
                                     <Insets />
                                  </opaqueInsets>
                               </TextField>
-                              <ComboBox fx:id="menuFilterBusquedaLibros" depthTest="DISABLE" layoutX="558.0" layoutY="46.0" prefHeight="0.0" prefWidth="220.0" promptText="Filtros" styleClass="combo-box" stylesheets="@../Styles/TextStyle.css" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="558.0" AnchorPane.rightAnchor="12.0" AnchorPane.topAnchor="46.0" />
-                              <Label layoutX="587.0" layoutY="31.0" text="Búsqueda de Libros">
+                              <ComboBox fx:id="menuFilterBusquedaLibros" depthTest="DISABLE" layoutX="570.0" layoutY="44.0" prefHeight="40.0" prefWidth="220.0" promptText="Filtros" styleClass="combo-box" stylesheets="@../Styles/TextStyle.css" AnchorPane.bottomAnchor="22.0" AnchorPane.leftAnchor="570.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="44.0" />
+                              <Label layoutX="592.0" layoutY="28.0" text="Control de Inventario">
                                  <font>
                                     <Font name="Tw Cen MT Bold" size="20.0" />
                                  </font>
-                                 <opaqueInsets>
-                                    <Insets left="2.0" />
-                                 </opaqueInsets>
                               </Label>
-                              <ImageView fitHeight="99.0" fitWidth="109.0" layoutY="-10.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fitHeight="99.0" fitWidth="109.0" layoutX="-2.0" layoutY="-12.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../airbook/images/LogosLogo-100.jpg" />
                                  </image>
@@ -161,99 +158,31 @@
                         </AnchorPane>
                         <AnchorPane layoutX="19.0" layoutY="118.0" prefHeight="599.0" prefWidth="792.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="120.0">
                            <children>
-                              <TableView fx:id="tableBusquedaLibros" onMouseClicked="#Detail_Search" prefHeight="590.0" prefWidth="790.0" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                <columns>
-                                  <TableColumn fx:id="columnNombreBusquedaLibro" prefWidth="197.5" text="Nombre" />
-                                  <TableColumn fx:id="columnAutorBusquedaLibro" prefWidth="197.5" text="Autor" />
+                              <TableView fx:id="tableBusquedaLibros" prefHeight="590.0" prefWidth="790.0" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <columns>
+                                    <TableColumn fx:id="columnNombreBusquedaLibro" prefWidth="197.5" text="Nombre" />
+                                    <TableColumn fx:id="columnAutorBusquedaLibro" prefWidth="197.5" text="Autor" />
                                     <TableColumn fx:id="columnEditorialBusquedaLibro" prefWidth="197.5" text="Editorial" />
                                     <TableColumn fx:id="columnIsbnBusquedaLibro" prefWidth="197.5" text="ISBN" />
-                                </columns>
+                                 </columns>
                               </TableView>
-                              <Button layoutY="507.0" mnemonicParsing="false" onAction="#onClicVolverBusquedaLibros" prefHeight="34.0" prefWidth="130.0" style="-fx-background-color: #F1DE9C;" text="Volver">
+                              <Button layoutY="507.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="130.0" style="-fx-background-color: #F1DE9C;" text="Volver">
                                  <font>
                                     <Font name="Tw Cen MT Condensed Bold" size="16.0" />
                                  </font>
                               </Button>
-                              <Button layoutX="646.0" layoutY="509.0" mnemonicParsing="false" onMouseClicked="#onClicDetalles" prefHeight="34.0" prefWidth="130.0" style="-fx-background-color: #F1DE9C;" text="Ver Más">
+                              <Button layoutX="646.0" layoutY="507.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="130.0" style="-fx-background-color: #F1DE9C;" text="Eliminar">
+                                 <font>
+                                    <Font name="Tw Cen MT Condensed Bold" size="16.0" />
+                                 </font>
+                              </Button>
+                              <Button layoutX="505.0" layoutY="507.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="130.0" style="-fx-background-color: #F1DE9C;" text="Editar">
                                  <font>
                                     <Font name="Tw Cen MT Condensed Bold" size="16.0" />
                                  </font>
                               </Button>
                            </children>
                         </AnchorPane>
-                     </children>
-                  </AnchorPane>
-               </children>
-            </AnchorPane>
-         </children>
-      </AnchorPane>
-      <AnchorPane fx:id="anchorBook" prefHeight="700.0" prefWidth="794.0" style="-fx-background-color: #F1DE9C;">
-         <children>
-            <AnchorPane layoutY="-2.0" prefHeight="115.0" prefWidth="851.0" style="-fx-background-color: #F2F2F2;">
-               <children>
-                  <ImageView fitHeight="99.0" fitWidth="102.0" layoutX="13.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../airbook/images/LogosLogo-100.jpg" />
-                     </image>
-                  </ImageView>
-               </children>
-            </AnchorPane>
-            <AnchorPane layoutX="44.0" layoutY="155.0" prefHeight="500.0" prefWidth="763.0" style="-fx-background-color: #D8754E;">
-               <children>
-                  <AnchorPane layoutX="14.0" layoutY="14.0" prefHeight="473.0" prefWidth="736.0" style="-fx-background-color: #F2F2F2;">
-                     <children>
-                        <Label layoutX="14.0" layoutY="14.0" prefHeight="23.0" prefWidth="189.0" text="Información Adicional">
-                           <font>
-                              <Font name="Tw Cen MT Bold" size="20.0" />
-                           </font>
-                        </Label>
-                        <Button layoutX="14.0" layoutY="425.0" mnemonicParsing="false" onAction="#onClicVolverDetalles" prefHeight="34.0" prefWidth="130.0" style="-fx-background-color: #F1DE9C;" text="Volver">
-                           <font>
-                              <Font name="Tw Cen MT Condensed Bold" size="16.0" />
-                           </font>
-                        </Button>
-                        <Label layoutX="29.0" layoutY="51.0" prefHeight="23.0" prefWidth="99.0" text="Título:">
-                           <font>
-                              <Font name="Tw Cen MT Bold" size="17.0" />
-                           </font>
-                        </Label>
-                        <Label layoutX="29.0" layoutY="82.0" prefHeight="23.0" prefWidth="99.0" text="Autor:">
-                           <font>
-                              <Font name="Tw Cen MT Bold" size="17.0" />
-                           </font>
-                        </Label>
-                        <Label layoutX="29.0" layoutY="115.0" prefHeight="23.0" prefWidth="99.0" text="Editorial:">
-                           <font>
-                              <Font name="Tw Cen MT Bold" size="17.0" />
-                           </font>
-                        </Label>
-                        <Label layoutX="29.0" layoutY="150.0" prefHeight="23.0" prefWidth="148.0" text="Año de Publicación:">
-                           <font>
-                              <Font name="Tw Cen MT Bold" size="17.0" />
-                           </font>
-                        </Label>
-                        <Label layoutX="30.0" layoutY="188.0" prefHeight="23.0" prefWidth="99.0" text="Código ISBN:">
-                           <font>
-                              <Font name="Tw Cen MT Bold" size="17.0" />
-                           </font>
-                        </Label>
-                        <Label layoutX="30.0" layoutY="222.0" prefHeight="23.0" prefWidth="99.0" text="Precio:">
-                           <font>
-                              <Font name="Tw Cen MT Bold" size="17.0" />
-                           </font>
-                        </Label>
-                        <TextField layoutX="80.0" layoutY="50.0" stylesheets="@../Styles/TextStyle.css" />
-                        <TextField layoutX="80.0" layoutY="81.0" stylesheets="@../Styles/TextStyle.css" />
-                        <TextField layoutX="96.0" layoutY="114.0" stylesheets="@../Styles/TextStyle.css" />
-                        <TextField layoutX="177.0" layoutY="149.0" stylesheets="@../Styles/TextStyle.css" />
-                        <TextField layoutX="129.0" layoutY="187.0" stylesheets="@../Styles/TextStyle.css" />
-                        <TextField layoutX="80.0" layoutY="221.0" stylesheets="@../Styles/TextStyle.css" />
-                        <Button layoutX="592.0" layoutY="425.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="130.0" style="-fx-background-color: #F1DE9C;" text="Agreagr al carrito">
-                           <font>
-                              <Font name="Tw Cen MT Condensed Bold" size="16.0" />
-                           </font>
-                        </Button>
-                        <ComboBox layoutX="28.0" layoutY="282.0" prefWidth="150.0" promptText="Número de Copias" stylesheets="@../Styles/TextStyle.css" />
                      </children>
                   </AnchorPane>
                </children>
