--- a/src/gui/Login.fxml
+++ b/src/gui/Login.fxml
@@ -21,13 +21,13 @@
       </AnchorPane>
       <AnchorPane layoutY="96.0" prefHeight="379.0" prefWidth="500.0" style="-fx-background-color: #F2F2F2;">
          <children>
-            <TextField layoutX="96.0" layoutY="114.0" prefHeight="34.0" prefWidth="309.0" promptText="Ingrese cédula" styleClass="text-field" stylesheets="@../Styles/TextStyle.css" />
+            <TextField fx:id="TextCedula" layoutX="96.0" layoutY="114.0" prefHeight="34.0" prefWidth="309.0" promptText="Ingrese cédula" styleClass="text-field" stylesheets="@../Styles/TextStyle.css" />
             <Button fx:id="InicioSesion" layoutX="96.0" layoutY="270.0" mnemonicParsing="false" onAction="#LoginButtonPushed" prefHeight="31.0" prefWidth="309.0" style="-fx-background-color: #F1DE9C;" text="Iniciar Sesión">
                <font>
                   <Font name="Tw Cen MT Condensed Bold" size="17.0" />
                </font>
             </Button>
-            <TextField layoutX="96.0" layoutY="190.0" prefHeight="34.0" prefWidth="309.0" promptText="Ingrese contraseña" styleClass="text-field" stylesheets="@../Styles/TextStyle.css" />
+            <TextField fx:id="TextPassw" layoutX="96.0" layoutY="190.0" prefHeight="34.0" prefWidth="309.0" promptText="Ingrese contraseña" styleClass="text-field" stylesheets="@../Styles/TextStyle.css" />
             <Text layoutX="171.0" layoutY="61.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Inició de Sesión" wrappingWidth="159.00000035762787">
                <font>
                   <Font name="Tw Cen MT" size="25.0" />
