--- a/src/gui/MenuAdmin.fxml
+++ b/src/gui/MenuAdmin.fxml
@@ -127,68 +127,6 @@
             </AnchorPane>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="anchorBusquedaLibros" layoutY="99.0" prefHeight="750.0" prefWidth="850.0" style="-fx-background-color: #D8754E;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <children>
-            <AnchorPane layoutX="13.0" layoutY="13.0" prefHeight="638.0" prefWidth="837.0" style="-fx-background-color: #ffffff;" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
-               <children>
-                  <AnchorPane prefHeight="631.0" prefWidth="830.0" style="-fx-background-color: #F2F2F2;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                     <children>
-                        <AnchorPane layoutX="34.0" layoutY="26.0" prefHeight="106.0" prefWidth="790.0" AnchorPane.bottomAnchor="604.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
-                           <children>
-                              <TextField fx:id="textSearchBusquedaLibros" layoutY="44.0" onKeyTyped="#onClicTxtBusquedaLibro" prefHeight="40.0" prefWidth="562.0" promptText="Búsqueda Rápida" styleClass="text-field" stylesheets="@../Styles/TextStyle.css" AnchorPane.bottomAnchor="22.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="228.0" AnchorPane.topAnchor="44.0">
-                                 <padding>
-                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                                 </padding>
-                                 <opaqueInsets>
-                                    <Insets />
-                                 </opaqueInsets>
-                              </TextField>
-                              <ComboBox fx:id="menuFilterBusquedaLibros" depthTest="DISABLE" layoutX="570.0" layoutY="44.0" prefHeight="40.0" prefWidth="220.0" promptText="Filtros" styleClass="combo-box" stylesheets="@../Styles/TextStyle.css" AnchorPane.bottomAnchor="22.0" AnchorPane.leftAnchor="570.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="44.0" />
-                              <Label layoutX="592.0" layoutY="28.0" text="Control de Inventario">
-                                 <font>
-                                    <Font name="Tw Cen MT Bold" size="20.0" />
-                                 </font>
-                              </Label>
-                              <ImageView fitHeight="99.0" fitWidth="109.0" layoutX="-2.0" layoutY="-12.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../airbook/images/LogosLogo-100.jpg" />
-                                 </image>
-                              </ImageView>
-                           </children>
-                        </AnchorPane>
-                        <AnchorPane layoutX="19.0" layoutY="118.0" prefHeight="599.0" prefWidth="792.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="120.0">
-                           <children>
-                              <TableView fx:id="tableBusquedaLibros" onMouseClicked="#activarBotones" prefHeight="590.0" prefWidth="790.0" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                 <columns>
-                                    <TableColumn fx:id="columnNombreBusquedaLibro" prefWidth="197.5" text="Nombre" />
-                                    <TableColumn fx:id="columnAutorBusquedaLibro" prefWidth="197.5" text="Autor" />
-                                    <TableColumn fx:id="columnEditorialBusquedaLibro" prefWidth="197.5" text="Editorial" />
-                                    <TableColumn fx:id="columnIsbnBusquedaLibro" prefWidth="197.5" text="ISBN" />
-                                 </columns>
-                              </TableView>
-                              <Button layoutY="507.0" mnemonicParsing="false" onAction="#onClicVolverBusquedaLibros" prefHeight="34.0" prefWidth="130.0" style="-fx-background-color: #F1DE9C;" text="Volver">
-                                 <font>
-                                    <Font name="Tw Cen MT Condensed Bold" size="16.0" />
-                                 </font>
-                              </Button>
-                              <Button fx:id="editarLibro" disable="true" layoutX="646.0" layoutY="507.0" mnemonicParsing="false" onAction="#onClicEditarLibro" prefHeight="34.0" prefWidth="130.0" style="-fx-background-color: #F1DE9C;" text="Editar">
-                                 <font>
-                                    <Font name="Tw Cen MT Condensed Bold" size="16.0" />
-                                 </font>
-                              </Button>
-                              <Button fx:id="nuevoLibro" layoutX="501.0" layoutY="508.0" mnemonicParsing="false" onAction="#onClicNuevoLibro" prefHeight="34.0" prefWidth="130.0" style="-fx-background-color: #F1DE9C;" text="Nuevo">
-                                 <font>
-                                    <Font name="Tw Cen MT Condensed Bold" size="16.0" />
-                                 </font>
-                              </Button>
-                           </children>
-                        </AnchorPane>
-                     </children>
-                  </AnchorPane>
-               </children>
-            </AnchorPane>
-         </children>
-      </AnchorPane>
       <AnchorPane fx:id="anchorBook" prefHeight="700.0" prefWidth="794.0" style="-fx-background-color: #F1DE9C;">
          <children>
             <AnchorPane layoutY="-2.0" prefHeight="115.0" prefWidth="851.0" style="-fx-background-color: #F2F2F2;">
@@ -272,6 +210,68 @@
                               <Font name="Tw Cen MT Condensed Bold" size="16.0" />
                            </font>
                         </Button>
+                     </children>
+                  </AnchorPane>
+               </children>
+            </AnchorPane>
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="anchorBusquedaLibros" layoutY="99.0" prefHeight="750.0" prefWidth="850.0" style="-fx-background-color: #D8754E;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <AnchorPane layoutX="13.0" layoutY="13.0" prefHeight="638.0" prefWidth="837.0" style="-fx-background-color: #ffffff;" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+               <children>
+                  <AnchorPane prefHeight="631.0" prefWidth="830.0" style="-fx-background-color: #F2F2F2;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <children>
+                        <AnchorPane layoutX="34.0" layoutY="26.0" prefHeight="96.0" prefWidth="790.0" AnchorPane.bottomAnchor="564.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
+                           <children>
+                              <TextField fx:id="textSearchBusquedaLibros" layoutX="96.0" layoutY="44.0" onKeyTyped="#onClicTxtBusquedaLibro" prefHeight="40.0" prefWidth="466.0" promptText="Búsqueda Rápida" styleClass="text-field" stylesheets="@../Styles/TextStyle.css" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="96.0" AnchorPane.rightAnchor="228.0">
+                                 <padding>
+                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                 </padding>
+                                 <opaqueInsets>
+                                    <Insets />
+                                 </opaqueInsets>
+                              </TextField>
+                              <ComboBox fx:id="menuFilterBusquedaLibros" depthTest="DISABLE" layoutX="570.0" layoutY="44.0" prefHeight="40.0" prefWidth="220.0" promptText="Filtros" styleClass="combo-box" stylesheets="@../Styles/TextStyle.css" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="570.0" AnchorPane.rightAnchor="0.0" />
+                              <Label layoutX="592.0" layoutY="1.0" text="Control de Inventario">
+                                 <font>
+                                    <Font name="Tw Cen MT Bold" size="20.0" />
+                                 </font>
+                              </Label>
+                              <ImageView fitHeight="99.0" fitWidth="109.0" layoutX="-2.0" layoutY="-12.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0">
+                                 <image>
+                                    <Image url="@../airbook/images/LogosLogo-100.jpg" />
+                                 </image>
+                              </ImageView>
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane layoutX="19.0" layoutY="118.0" prefHeight="599.0" prefWidth="792.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="120.0">
+                           <children>
+                              <TableView fx:id="tableBusquedaLibros" onMouseClicked="#activarBotones" prefHeight="590.0" prefWidth="790.0" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <columns>
+                                    <TableColumn fx:id="columnNombreBusquedaLibro" prefWidth="197.5" text="Nombre" />
+                                    <TableColumn fx:id="columnAutorBusquedaLibro" prefWidth="197.5" text="Autor" />
+                                    <TableColumn fx:id="columnEditorialBusquedaLibro" prefWidth="197.5" text="Editorial" />
+                                    <TableColumn fx:id="columnIsbnBusquedaLibro" prefWidth="197.5" text="ISBN" />
+                                 </columns>
+                              </TableView>
+                              <Button layoutY="507.0" mnemonicParsing="false" onAction="#onClicVolverBusquedaLibros" prefHeight="34.0" prefWidth="130.0" style="-fx-background-color: #F1DE9C;" text="Volver">
+                                 <font>
+                                    <Font name="Tw Cen MT Condensed Bold" size="16.0" />
+                                 </font>
+                              </Button>
+                              <Button fx:id="editarLibro" disable="true" layoutX="646.0" layoutY="507.0" mnemonicParsing="false" onAction="#onClicEditarLibro" prefHeight="34.0" prefWidth="130.0" style="-fx-background-color: #F1DE9C;" text="Editar">
+                                 <font>
+                                    <Font name="Tw Cen MT Condensed Bold" size="16.0" />
+                                 </font>
+                              </Button>
+                              <Button fx:id="nuevoLibro" layoutX="501.0" layoutY="508.0" mnemonicParsing="false" onAction="#onClicNuevoLibro" prefHeight="34.0" prefWidth="130.0" style="-fx-background-color: #F1DE9C;" text="Nuevo">
+                                 <font>
+                                    <Font name="Tw Cen MT Condensed Bold" size="16.0" />
+                                 </font>
+                              </Button>
+                           </children>
+                        </AnchorPane>
                      </children>
                   </AnchorPane>
                </children>
